@@ -1,6 +1,8 @@
 Changelog for "Apache xml-security" <http://santuario.apache.org/>
 New in v1.4.4-SNAPSHOT
-    Fixed Bug 48368:  Digest Value of References inside Manifest - calculation order problem
+    Fixed Bug 49450: KeyStoreResolver always exhausted after first use. Thanks to Clement Pellerin.
+    Fixed Bug 49447: KeyStoreResolver iterator returns null for symmetric keys. Thanks to Clement Pellerin.
+    Fixed Bug 48368: Digest Value of References inside Manifest - calculation order problem
     Fixed Bug 47779: ConcurrentModificationException in XMLUtils.  
     Fixed Bug 47761: xmlns:xml namespace improperly emitted during excl c14n. Thanks to Scott Cantor.
     Fixed Bug 36526: Out of memory error when signing or verifying big files. Thanks to Agnes Juhasz.
